fix(website): fix link style on safari

--- a/website/src/styles/_type.scss
+++ b/website/src/styles/_type.scss
@@ -140,7 +140,9 @@ $gutter: 0 !default;
 
 @mixin links {
 	a {
-		text-decoration: dotted underline var(--col-green);
+		text-decoration-line: underline;
+		text-decoration-style: dotted;
+		text-decoration-color: var(--col-green);
 
 		&:hover {
 			color: var(--col-green);
